# cubecraft

android_app/: settings.gradle.kts
android_app/app/: build.gradle.kts
android_app/app/src/androidTest/java/com/mblueberry/cubecraft/: ExampleInstrumentedTest.java
android_app/app/src/main/: AndroidManifest.xml
android_app/app/src/main/cpp/: CMakeLists.txt  android_main.cpp
android_app/app/src/main/java/com/mblueberry/cubecraft/: MainActivity.java
android_app/app/src/main/res/values/: strings.xml  themes.xml
android_app/app/src/main/res/values-night/: themes.xml
android_app/app/src/test/java/com/mblueberry/cubecraft/: ExampleUnitTest.java
android_app/gradle/: libs.versions.toml
android_app/gradle/wrapper/: gradle-wrapper.properties
core/: BlockHighlight.cpp  BlockHighlight.h  Camera.cpp  Camera.h  ChunkCollisionMesh.cpp  ChunkCollisionMesh.h  Core.cpp  Core.h  CrosshairRenderer.cpp  CrosshairRenderer.h  DebugRayRenderer.h  HandRenderer.cpp  HandRenderer.h  Logger.cpp  Logger.h  MeshBlock.cpp  MeshBlock.h  Player.cpp  Player.h  PlayerRenderer.cpp  PlayerRenderer.h  RayRenderer.cpp  RayRenderer.h  Raycast.cpp  Raycast.h  RaycastHit.h  Renderer.cpp  Renderer.h  TextureIndex.h
core/block/: AirBlock.cpp  AirBlock.h  BedrockBlock.cpp  BedrockBlock.h  Block.h  BlockType.h
core/collision/: AABB.h  CollisionSystem.cpp  CollisionSystem.h
core/input/: DesktopInputHandler.cpp  DesktopInputHandler.h  InputEvents.h  InputHandler.h  InputManager.cpp  InputManager.h
core/ui/: AndroidRenderer.h  OpenGLRenderer.h  RenderInterface.h  UIManager.cpp  UIManager.h
core/world/: Chunk.cpp  Chunk.h  ChunkMesh.cpp  ChunkMesh.h  World.cpp  World.h  WorldRenderer.cpp  WorldRenderer.h
windows_app/: CMakeLists.txt  windows_main.cpp
